update: add references

--- a/Part_I_exploration_template.ipynb
+++ b/Part_I_exploration_template.ipynb
@@ -2045,6 +2045,17 @@
     "* Subscribers tend to be people who use the service to go to work or school, becuase they use the service more on weekdays than weekends, and at peak hours than other others. Customers tend to be recreational users, because they use the service more on weekends, and have a flexible trip hours.\n",
     "* 'Other' gender User's tend to use the service longer than Male and Female users' Female users comes second.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__References__\n",
+    "* [Ford Gobike Data Exploration](https://deepnote.com/@dain-russell/bike-exploration-328b5ba1-25e4-4a35-aaad-e70146c9e182)\n",
+    "* [Ford GoBike System Data Exploration](https://medium.datadriveninvestor.com/ford-gobike-system-data-exploration-fb5b229d4106)\n",
+    "* [Ford gobike Data Analysis](https://www.kaggle.com/code/chirag02/ford-gobike-data-analysis/notebook)\n",
+    "* Udacity Project Example (Diamond Dataset)"
+   ]
   }
  ],
  "metadata": {
